2002-11-30  JMB  Case sensitivity bugfix

    Applied a patch to MetaKit that allows c4_View Finds and Selects to be
    case sensitive (which I thought they already were).  This fixes
    several bugs related to columns, views, sortings, and filters which
    have names differing only by case.

2002-11-29  JMB  Optional checkbox toggle in data viewer, date selector
                 enhancements

    Added a preference which when checked allows you to toggle boolean
    values directly in the data viewer by clicking the appropriate cell.
    This makes it more convenient to use PortaBase as a todo list, but
    also makes it easier to accidentally change data values.

    Changed the date selector dialog so that the month is displayed as
    a droplist and the year is displayed as a spinbox; thus both can
    be changed directly to any desired value without having to
    repeatedly press the next or previous buttons.

2002-11-26  JMB  UTF-8 CSV file import

    Fixed a one-line bug which caused CSV files to be imported as Latin-1
    instead of UTF-8.

2002-11-25  #################### PortaBase 1.3 ####################

2002-11-24  JMB  Enum columns

    Added support for enum columns (otherwise known as enumerations,
    pop-ups, string lists, etc.)  There is a new "Edit Enums" item in the
    "File" menu, and as a shortcut enums can be defined when creating a
    new column by selecting "(New Enum)" as the type.

2002-11-19  JMB  Better precision on decimal fields, "default defaults"

    In previous releases, decimal fields were only shown with six
    significant digits.  Now the entered string representation is stored
    along with the floating point number obtained from it, so when browsing
    the data or editing rows, these values are displayed exactly as they
    were entered.

    When adding a new column and you pick either Integer or Decimal as the
    type, the current content (if any) of the default value entry box is