@@ -8,5 +8,4 @@ Option to hide navigation bar (and show all rows)
 Option to show Notes as multiline edit fields in row editor
 "Copy row" menu item
 Pie chart of enum options in summary dialog
-Restrict export to rows passing the current filter
 Type letter to go to rows whose first text field in the view starts with it
