@@ -47,6 +47,7 @@ public:
     void setFilter(QString name);
     void closeView();
     void deleteAllRows();
+    void exportToCSV(QString filename);
     void allowBooleanToggle(bool flag);
 
 public slots:
