@@ -1,3 +1,14 @@
+2002-12-01  JMB  Bugfix in filter condition indices, filtered export
+
+    The data column for filter condition position indices had been declared
+    incorrectly, causing problems when loading filters from older format
+    PortaBase files; this should be fixed now (although the original
+    condition order is often not recoverable; a new valid order is defined).
+
+    The CSV export feature now exports only rows which pass the current
+    filter.  For the old "export all" behavior, just select the "All Rows"
+    filter before exporting.
+
 2002-11-30  JMB  Case sensitivity bugfix
 
     Applied a patch to MetaKit that allows c4_View Finds and Selects to be
